Revise content to include Neuroscience and remove contact
Updated the description meta tag and various text elements to include 'Neuroscience'. Removed the contact section and some project links.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Shayna Jain — Computer Science at Johns Hopkins. Cybersecurity, AI, and computational neuroscience." />
+  <meta name="description" content="Shayna Jain — Computer Science + Neuroscience at Johns Hopkins. Cybersecurity, AI, and computational neuroscience." />
   <title>Shayna Jain</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,6 @@
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
-        <a href="#contact" class="pill">Contact</a>
       </nav>
 
       <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-expanded="false">
@@ -39,7 +38,6 @@
       <a href="#experience">Experience</a>
       <a href="#projects">Projects</a>
       <a href="#skills">Skills</a>
-      <a href="#contact">Contact</a>
     </div>
   </header>
 
@@ -48,21 +46,20 @@
     <section class="hero" id="top">
       <div class="container hero-grid">
         <div class="hero-left">
-          <p class="badge">Johns Hopkins • CS (B.S.) • Cybersecurity • AI</p>
+          <p class="badge">Johns Hopkins • CS + Neuroscience • Cybersecurity • AI</p>
           <h1>
             Building secure, human-centered systems
-            <span class="muted">across cybersecurity, AI, and health-tech.</span>
+            <span class="muted">across cybersecurity, AI, and computational neuroscience.</span>
           </h1>
 
           <p class="subhead">
-            I’m Shayna Jain — a Computer Science student at Johns Hopkins interested in
+            I’m Shayna Jain — a Computer Science + Neuroscience student at Johns Hopkins interested in
             cybersecurity, AI, and computational neuroscience. I’ve worked on secure frontend workflows,
-            AI-driven narrative analytics, and applied security assessments.
+            AI-driven narrative analytics, applied security assessments, and EEG analysis pipelines.
           </p>
 
           <div class="cta-row">
             <a class="btn primary" href="#projects">View Projects</a>
-            <a class="btn" href="#contact">Get in touch</a>
           </div>
 
           <div class="link-row">
@@ -75,25 +72,11 @@
         </div>
 
         <div class="hero-right">
-          <div class="card portrait">
-            <!-- Optional: replace with your headshot -->
-            <div class="portrait-placeholder" aria-hidden="true"></div>
-            <div class="portrait-meta">
-              <p class="portrait-name">Shayna Jain</p>
-              <p class="portrait-role">CS @ Johns Hopkins</p>
-              <div class="mini">
-                <span class="tag">Cybersecurity</span>
-                <span class="tag">AI</span>
-                <span class="tag">Health-tech</span>
-              </div>
-            </div>
-          </div>
-
           <div class="card quickfacts">
             <h2 class="card-title">Now</h2>
             <ul class="list">
-              <li><strong>Focus:</strong> security + applied AI projects</li>
-              <li><strong>Interests:</strong> network security, trustworthy AI, computational neuro</li>
+              <li><strong>Focus:</strong> security + applied AI + neuro-inspired analysis</li>
+              <li><strong>Interests:</strong> network security, trustworthy AI, EEG/functional connectivity</li>
               <li><strong>Open to:</strong> research + internships</li>
             </ul>
           </div>
@@ -119,7 +102,7 @@
             </p>
             <p>
               Recently, I’ve worked on secure workflows for transcription + summaries, narrative analytics on
-              global events, and hands-on vulnerability assessment work.
+              global events, hands-on vulnerability assessment work, and computational neuroscience pipelines.
             </p>
           </div>
 
@@ -223,6 +206,21 @@
         <div class="cards-3">
           <article class="card project">
             <div class="project-top">
+              <h3>EEG Functional Connectivity</h3>
+              <span class="chip">Neuroscience</span>
+            </div>
+            <p>
+              Computational neuroscience pipeline to estimate functional connectivity from EEG and analyze network-level patterns.
+            </p>
+            <ul class="list compact">
+              <li>Preprocessed EEG signals and computed connectivity metrics across channels</li>
+              <li>Constructed connectivity matrices and summarized graph/network structure</li>
+              <li>Produced interpretable outputs for comparing conditions and subjects</li>
+            </ul>
+          </article>
+
+          <article class="card project">
+            <div class="project-top">
               <h3>AIDA — Adaptive Intelligence Diabetes Assistant</h3>
               <span class="chip">Health-tech</span>
             </div>
@@ -235,9 +233,6 @@
               <li>Market analysis focused on pen + CGM users</li>
               <li>Awarded 2nd place in a pre-accelerator pitch competition</li>
             </ul>
-            <div class="project-links">
-              <a href="#" target="_blank" rel="noopener">GitHub</a>
-            </div>
           </article>
 
           <article class="card project">
@@ -254,10 +249,6 @@
               <li>High-throughput image processing + feature workflows</li>
               <li>Actionable insights from complex experimental data</li>
             </ul>
-            <div class="project-links">
-              <a href="#" target="_blank" rel="noopener">GitHub</a>
-              <a href="#" target="_blank" rel="noopener">Poster</a>
-            </div>
           </article>
 
           <article class="card project">
@@ -273,10 +264,6 @@
               <li>Analyzed issues and proposed mitigations</li>
               <li>Delivered stakeholder presentation</li>
             </ul>
-            <div class="project-links">
-              <a href="#" target="_blank" rel="noopener">Slides</a>
-              <a href="#" target="_blank" rel="noopener">Report</a>
-            </div>
           </article>
 
           <article class="card project">
@@ -291,16 +278,8 @@
               <li>Interactive lessons on phishing, password hygiene, digital safety</li>
               <li>Designed curriculum aligned with national security principles</li>
             </ul>
-            <div class="project-links">
-              <a href="#" target="_blank" rel="noopener">Materials</a>
-              <a href="#" target="_blank" rel="noopener">Photos</a>
-            </div>
           </article>
         </div>
-
-        <p class="muted small">
-          Tip: Replace the “Demo / GitHub / Write-up” links with your real URLs (or remove what you don’t want).
-        </p>
       </div>
     </section>
 
@@ -355,39 +334,6 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section class="section" id="contact">
-      <div class="container">
-        <div class="section-head">
-          <h2>Contact</h2>
-          <p class="muted">Best way to reach me: email or LinkedIn.</p>
-        </div>
-
-        <div class="grid-2">
-          <div class="card">
-            <h3>Say hi</h3>
-            <p>
-              I’m happy to chat about cybersecurity internships, applied AI, health-tech, or research collaborations.
-            </p>
-            <div class="contact-box">
-              <a class="btn primary" href="mailto:shaynajain@gmail.com">Email me</a>
-              <a class="btn" href="https://linkedin.com/in/shayna-jain-088877285" target="_blank" rel="noopener">LinkedIn</a>
-            </div>
-            <p class="muted small">Optional: you can remove your phone number from the site for privacy.</p>
-          </div>
-
-          <div class="card">
-            <h3>Quick links</h3>
-            <ul class="list">
-              <li><a href="#projects">Projects</a> (recommended first stop)</li>
-              <li><a href="#experience">Experience</a></li>
-              <li><a href="https://github.com/" target="_blank" rel="noopener">GitHub</a> (add your profile)</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <footer class="footer">
       <div class="container footer-inner">
         <p>© <span id="year"></span> Shayna Jain</p>
@@ -399,4 +345,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
