--- a/index.html
+++ b/index.html
@@ -203,21 +203,22 @@
           <p class="muted">A few things I’ve built or led — with clear outcomes.</p>
         </div>
 
-        <div class="cards-3">
-          <article class="card project">
-            <div class="project-top">
-              <h3>EEG Functional Connectivity</h3>
-              <span class="chip">Neuroscience</span>
-            </div>
-            <p>
-              Computational neuroscience pipeline to estimate functional connectivity from EEG and analyze network-level patterns.
-            </p>
-            <ul class="list compact">
-              <li>Preprocessed EEG signals and computed connectivity metrics across channels</li>
-              <li>Constructed connectivity matrices and summarized graph/network structure</li>
-              <li>Produced interpretable outputs for comparing conditions and subjects</li>
-            </ul>
-          </article>
+        <article class="card project">
+        <div class="project-top">
+          <h3>EEG Functional Connectivity (MNE-Python)</h3>
+          <span class="chip">Neuroscience</span>
+        </div>
+        <p>
+          Built an end-to-end EEG analysis pipeline in MNE-Python to study alpha-band (8–13 Hz) functional connectivity
+          during rest vs. motor execution on real human neurophysiological data (PhysioNet EEGMMIDB).
+        </p>
+        <ul class="list compact">
+          <li>Computed coherence-based functional connectivity matrices and constructed thresholded brain networks.</li>
+          <li>Quantified state-dependent differences using graph metrics (degree, clustering coefficient) while controlling for graph density.</li>
+          <li>Visualized functional networks using true scalp electrode coordinates and interpreted network-level changes while accounting for methodological confounds.</li>
+        </ul>
+      </article>
+
 
           <article class="card project">
             <div class="project-top">
