--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 
           <p class="subhead">
             I’m Shayna Jain — a Computer Science + Neuroscience student at Johns Hopkins interested in
-            cybersecurity, AI, and computational neuroscience. I’ve worked on secure frontend workflows,
-            AI-driven narrative analytics, applied security assessments, and EEG analysis pipelines.
+            cybersecurity, AI, and computational neuroscience. I’ve worked on securing healthcare applications, applied security assessments, EEG analysis pipelines, and AI-driven narrative analytics.
           </p>
 
           <div class="cta-row">
@@ -78,40 +77,6 @@
               <li><strong>Focus:</strong> security + applied AI + neuro-inspired analysis</li>
               <li><strong>Interests:</strong> network security, trustworthy AI, EEG/functional connectivity</li>
               <li><strong>Open to:</strong> research + internships</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ABOUT -->
-    <section class="section" id="about">
-      <div class="container">
-        <div class="section-head">
-          <h2>About</h2>
-          <p class="muted">A quick snapshot of what I care about and how I work.</p>
-        </div>
-
-        <div class="grid-2">
-          <div class="card">
-            <h3>What I’m building toward</h3>
-            <p>
-              I’m interested in roles where I can combine <strong>security</strong> with <strong>applied AI</strong>—
-              especially in national security and health-tech contexts. I like projects that connect technical rigor
-              to real people and real constraints.
-            </p>
-            <p>
-              Recently, I’ve worked on secure workflows for transcription + summaries, narrative analytics on
-              global events, hands-on vulnerability assessment work, and computational neuroscience pipelines.
-            </p>
-          </div>
-
-          <div class="card">
-            <h3>What you can expect from me</h3>
-            <ul class="list">
-              <li><strong>Clear communication</strong> (I write and present findings for mixed audiences)</li>
-              <li><strong>Security mindset</strong> (threat modeling, validation, safer defaults)</li>
-              <li><strong>Practical builds</strong> (shipping small, real systems with measurable outcomes)</li>
             </ul>
           </div>
         </div>
